--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -533,6 +533,7 @@
                     </td>
                     <td>
                         <select class='q_level' style='width: 80px;'>
+                            <option>Q lv 0</option>
                             <option>Q lv 1</option>
                             <option>Q lv 2</option>
                             <option>Q lv 3</option>
@@ -542,6 +543,7 @@
                     </td>
                     <td>
                         <select class='w_level' style='width: 80px;'>
+                            <option>W lv 0</option>
                             <option>W lv 1</option>
                             <option>W lv 2</option>
                             <option>W lv 3</option>
@@ -551,6 +553,7 @@
                     </td>
                     <td>
                         <select class='e_level' style='width: 80px;'>
+                            <option>E lv 0</option>
                             <option>E lv 1</option>
                             <option>E lv 2</option>
                             <option>E lv 3</option>
@@ -560,6 +563,7 @@
                     </td>
                     <td>
                         <select class='r_level' style='width: 80px;'>
+                            <option>R lv 0</option>
                             <option>R lv 1</option>
                             <option>R lv 2</option>
                             <option>R lv 3</option>
@@ -575,9 +579,9 @@
                     <td>
                         <select class='preset' style='width: 80px;'>
                             <option>Min spec</option>
+                            <option>4 Drone</option>
                             <option>1st Night</option>
                             <option>2nd Day</option>
-                            <option>preset 04</option>
                             <option>preset 05</option>
                             <option>preset 06</option>
                             <option>preset 07</option>
@@ -968,6 +972,7 @@
                     </td>
                     <td>
                         <select class='q_level' style='width: 80px;'>
+                            <option>Q lv 0</option>
                             <option>Q lv 1</option>
                             <option>Q lv 2</option>
                             <option>Q lv 3</option>
@@ -977,6 +982,7 @@
                     </td>
                     <td>
                         <select class='w_level' style='width: 80px;'>
+                            <option>W lv 0</option>
                             <option>W lv 1</option>
                             <option>W lv 2</option>
                             <option>W lv 3</option>
@@ -986,6 +992,7 @@
                     </td>
                     <td>
                         <select class='e_level' style='width: 80px;'>
+                            <option>E lv 0</option>
                             <option>E lv 1</option>
                             <option>E lv 2</option>
                             <option>E lv 3</option>
@@ -995,6 +1002,7 @@
                     </td>
                     <td>
                         <select class='r_level' style='width: 80px;'>
+                            <option>R lv 0</option>
                             <option>R lv 1</option>
                             <option>R lv 2</option>
                             <option>R lv 3</option>
@@ -1010,9 +1018,9 @@
                     <td>
                         <select class='preset' style='width: 80px;'>
                             <option>Min spec</option>
+                            <option>4 Drone</option>
                             <option>1st Night</option>
                             <option>2nd Day</option>
-                            <option>preset 04</option>
                             <option>preset 05</option>
                             <option>preset 06</option>
                             <option>preset 07</option>
@@ -1041,6 +1049,8 @@
         </div>
     </div>
     <br/>
-    <h3>업데이트 이후 에러 발생시 Shift + F5키를 누르세요.</h3>
+    <div style='width:100%;float:left;'>
+        <h3>업데이트 이후 에러 발생시 Shift + F5키를 누르세요.</h3>
+    </div>
 </body>
 </html>
