--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -178,10 +178,10 @@
 <body>
     <h3 class='subject'>
         Eternal Return: Black Survival Damage Calculator 0.24.3
-        <img class='hit_count' alt='hit' 
+        <!-- <img class='hit_count' alt='hit' 
             src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fartxe2.github.io%2Ferbsdc%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false' 
             align='middle'
-        />
+        /> -->
     </h3>    
     
     <div id='character0'>
@@ -578,7 +578,7 @@
                     </td>
                     <td>
                         <select class='preset' style='width: 80px;'>
-                            <option>Min spec</option>
+                            <option>Preset</option>
                             <option>4 Drone</option>
                             <option>1st Night</option>
                             <option>2nd Day</option>
@@ -1017,7 +1017,7 @@
                     </td>
                     <td>
                         <select class='preset' style='width: 80px;'>
-                            <option>Min spec</option>
+                            <option>Preset</option>
                             <option>4 Drone</option>
                             <option>1st Night</option>
                             <option>2nd Day</option>
