--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -612,14 +612,12 @@
     
     <div class='divider'>
         <div style='height: 8px;'></div>
-        <b>
-            - - - - - - - - - - Select Mode: 
+        <b>--- - - - - - - - - Select Mode: </b>
             <select id='mode' onchange='updateDisplay()'>
                 <option selected>SOLO</option>
                 <option>DUO</option>
                 <option>SQUAD</option>
             </select>
-        </b>
         <div style='height: 12px;'></div>
     </div>
     
