--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -2,7 +2,7 @@
 <html lang='ko'>
 <head>
     <meta charset="UTF-8">
-    <title>Eternal Return: Black Survival Damage Calculator 0.24.3</title>
+    <title>Eternal Return: Black Survival Damage Calculator 0.25.2</title>
     <style type="text/css">    
         @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
         body {
@@ -178,11 +178,11 @@
 </head>
 <body>
     <h3 class='subject'>
-        Eternal Return: Black Survival Damage Calculator 0.24.3
-        <!-- <img class='hit_count' alt='hit' 
+        Eternal Return: Black Survival Damage Calculator 0.25.2
+        <img class='hit_count' alt='hit' 
             src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fartxe2.github.io%2Ferbsdc%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false' 
             align='middle'
-        /> -->
+        />
     </h3>    
     
     <div id='character0'>
