--- a/erbsdc-prev/index.html
+++ b/erbsdc-prev/index.html
@@ -2,7 +2,7 @@
 <html lang='ko'>
 <head>
     <meta charset="UTF-8">
-    <title>Eternal Return: Black Survival Damage Calculator 0.24.3</title>
+    <title>Eternal Return: Black Survival Damage Calculator 0.25.2</title>
     <style type="text/css">    
         @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
         body {
@@ -170,6 +170,7 @@
     <script type="text/javascript" src='./db/character/EmmaDB.js'></script>
     <script type="text/javascript" src='./db/character/LenoxDB.js'></script>
     <script type="text/javascript" src='./db/character/RozziDB.js'></script>
+    <script type="text/javascript" src='./db/character/LukeDB.js'></script>
     <script type="text/javascript" src='./db/consumable/FoodDB.js'></script>
     <script type="text/javascript" src='./db/consumable/TrapDB.js'></script>
     <script type="text/javascript" src='./class/Character.js'></script>
@@ -177,7 +178,7 @@
 </head>
 <body>
     <h3 class='subject'>
-        Eternal Return: Black Survival Damage Calculator 0.24.3
+        Eternal Return: Black Survival Damage Calculator 0.25.2
         <img class='hit_count' alt='hit' 
             src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fartxe2.github.io%2Ferbsdc%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false' 
             align='middle'
@@ -504,6 +505,7 @@
                             <option>Emma</option>
                             <option>Lenox</option>
                             <option>Rozzi</option>
+                            <option>Luke</option>
                             <option></option>
                         </select>
                     </td>
@@ -941,6 +943,7 @@
                             <option>Emma</option>
                             <option>Lenox</option>
                             <option>Rozzi</option>
+                            <option>Luke</option>
                             <option></option>
                         </select>
                     </td>
