--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -179,10 +179,10 @@
 <body>
     <h3 class='subject'>
         Eternal Return: Black Survival Damage Calculator 0.25.4
-        <!-- <img class='hit_count' alt='hit' 
+        <img class='hit_count' alt='hit' 
             src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fartxe2.github.io%2Ferbsdc%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false' 
             align='middle'
-        /> -->
+        />
     </h3>    
     
     <div id='character0'>
