--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -183,6 +183,8 @@
             src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fartxe2.github.io%2Ferbsdc%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false' 
             align='middle'
         />
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href='./Guide.png'>guide</a>
     </h3>    
     
     <div id='character0'>
