--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -2,7 +2,7 @@
 <html lang='ko'>
 <head>
     <meta charset="UTF-8">
-    <title>Eternal Return: Black Survival Damage Calculator 0.25.4</title>
+    <title>Eternal Return: Black Survival Damage Calculator 0.26.0</title>
     <style type="text/css">    
         @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
         body {
@@ -171,6 +171,7 @@
     <script type="text/javascript" src='./db/character/LenoxDB.js'></script>
     <script type="text/javascript" src='./db/character/RozziDB.js'></script>
     <script type="text/javascript" src='./db/character/LukeDB.js'></script>
+    <script type="text/javascript" src='./db/character/CathyDB.js'></script>
     <script type="text/javascript" src='./db/consumable/FoodDB.js'></script>
     <script type="text/javascript" src='./db/consumable/TrapDB.js'></script>
     <script type="text/javascript" src='./class/Character.js'></script>
@@ -178,11 +179,11 @@
 </head>
 <body>
     <h3 class='subject'>
-        Eternal Return: Black Survival Damage Calculator 0.25.4
-        <img class='hit_count' alt='hit' 
+        Eternal Return: Black Survival Damage Calculator 0.26.0
+        <!-- <img class='hit_count' alt='hit' 
             src='https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fartxe2.github.io%2Ferbsdc%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false' 
             align='middle'
-        />
+        /> -->
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href='./Guide.png'>guide</a>
     </h3>    
@@ -508,6 +509,7 @@
                             <option>Lenox</option>
                             <option>Rozzi</option>
                             <option>Luke</option>
+                            <option>Cathy</option>
                             <option></option>
                         </select>
                     </td>
@@ -946,6 +948,7 @@
                             <option>Lenox</option>
                             <option>Rozzi</option>
                             <option>Luke</option>
+                            <option>Cathy</option>
                             <option></option>
                         </select>
                     </td>
