--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -451,7 +451,7 @@
                         <span class='label' title='Attack Power'> 깡공: <span class='stat attack_power'></span></span><br>
                         <span class='label' title='Attack Speed'> 공속: <span class='stat attack_speed'></span></span><br>
                         <span class='label' title='Critical Strike Chance'> 치확: <span class='stat critical_strike_chance'>%</span></span><br>
-                        <span class='label' title='Critical Strike Damage'> 치뎀: <span class='stat critical_strike_damage'>%</span></span><br>
+                        <span class='label' title='Critical Strike Damage'> 치뎀: <span class='stat critical_damage'>%</span></span><br>
                         <span class='label' title='Life Steal'> 흡혈: <span class='stat life_steal'>%</span></span><br>
                         <span class='label' title='Extra Normal Attack Damage'> 기추: <span class='stat extra_normal_attack_damage'>| %</span></span><br>
                         <span class='label' title='Skill Amplification'> 스증: <span class='stat skill_amplification'>| %</span></span><br>
@@ -467,10 +467,10 @@
                         <span class='label' title='HP Regen'> 체젠: <span class='stat hp_regen'>| %</span></span><br>
                         <span class='label' title='Normal Attack Damage Reduction'> 기감 : <span class='stat normal_attack_damage_reduction'>| %</span></span><br>
                         <span class='label' title='Movement Speed'> 이속 : <span class='stat movement_speed'></span></span><br>
-                        <span class='label' title='Out of Combat Movement Speed'> 비속 : <span class='stat out_of_combat_movement_speed'></span></span><br>
+                        <span class='label' title='Movement speed while not in combat'> 비속 : <span class='stat movement_speed_while_not_in_combat'></span></span><br>
                         <span class='label' title='Vision Range'> 시야 : <span class='stat vision_range'></span></span><br>
                         <span class='label' title='Attack Range'> 사거리 : <span class='stat attack_range'></span></span><br>
-                        <span class='label' title='Critical Strike Damage Reduction'> 치뎀감 : <span class='stat critical_strike_damage_reduction'>%</span></span><br>
+                        <span class='label' title='Critical Strike Damage Reduction'> 치뎀감 : <span class='stat critical_damage_reduction'>%</span></span><br>
                     </td>
                     <td class='trap equip_image'>
                     </td>
@@ -890,7 +890,7 @@
                         <span class='label' title='Attack Power'> 깡공: <span class='stat attack_power'></span></span><br>
                         <span class='label' title='Attack Speed'> 공속: <span class='stat attack_speed'></span></span><br>
                         <span class='label' title='Critical Strike Chance'> 치확: <span class='stat critical_strike_chance'>%</span></span><br>
-                        <span class='label' title='Critical Strike Damage'> 치뎀: <span class='stat critical_strike_damage'>%</span></span><br>
+                        <span class='label' title='Critical Strike Damage'> 치뎀: <span class='stat critical_damage'>%</span></span><br>
                         <span class='label' title='Life Steal'> 흡혈: <span class='stat life_steal'>%</span></span><br>
                         <span class='label' title='Extra Normal Attack Damage'> 기추: <span class='stat extra_normal_attack_damage'>| %</span></span><br>
                         <span class='label' title='Skill Amplification'> 스증: <span class='stat skill_amplification'>| %</span></span><br>
@@ -906,10 +906,10 @@
                         <span class='label' title='HP Regen'> 체젠: <span class='stat hp_regen'>| %</span></span><br>
                         <span class='label' title='Normal Attack Damage Reduction'> 기감 : <span class='stat normal_attack_damage_reduction'>| %</span></span><br>
                         <span class='label' title='Movement Speed'> 이속 : <span class='stat movement_speed'></span></span><br>
-                        <span class='label' title='Out of Combat Movement Speed'> 비속 : <span class='stat out_of_combat_movement_speed'></span></span><br>
+                        <span class='label' title='Movement speed while not in combat'> 비속 : <span class='stat movement_speed_while_not_in_combat'></span></span><br>
                         <span class='label' title='Vision Range'> 시야 : <span class='stat vision_range'></span></span><br>
                         <span class='label' title='Attack Range'> 사거리 : <span class='stat attack_range'></span></span><br>
-                        <span class='label' title='Critical Strike Damage Reduction'> 치뎀감 : <span class='stat critical_strike_damage_reduction'>%</span></span><br>
+                        <span class='label' title='Critical Strike Damage Reduction'> 치뎀감 : <span class='stat critical_damage_reduction'>%</span></span><br>
                     </td>
                     <td class='trap equip_image'>
                     </td>
@@ -1056,7 +1056,9 @@
     </div>
     <br/>
     <div style='width:100%;float:left;'>
-        <h3>***업데이트 이후 에러 발생시 Shift + F5키를 누르세요.***</h3><br>
+        <br><br>last update: 2021-02-20 18:32<br>
+        <h3>***업데이트 이후 에러 발생시 Shift + F5키를 누르세요.***</h3>
+
 기본 공격 및 일부 스킬들은 일반 피해를 입히며 다음 공식을 적용합니다.<br>
 <br>
 (기본 피해 + 피해 증가) * 피해 증폭 * 최종 피해 증폭 * 모드 증폭<br>
