--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -611,7 +611,7 @@
             <b>D : </b><span class='d_damage'></span><span class='d_option'></span><br>
             <b>T : </b><span class='t_damage'></span><span class='t_option'></span><br>
             <b>Trap: P: </b><span class='trap_damage'></span><br>
-            <b>Combo : </b><input class='combo_option'>&nbsp;<input class='stack combo_time' type='number'><b>s</b><br>
+            <b>Combo : </b><input class='combo_option'>&nbsp;<input class='stack combo_time' type='number' value='0'><b>s</b><br>
             <b>ㄴDamage : </b><span class='combo_damage'></span>
         </div>
     </div>
@@ -1050,13 +1050,13 @@
             <b>D : </b><span class='d_damage'></span><span class='d_option'></span><br>
             <b>T : </b><span class='t_damage'></span><span class='t_option'></span><br>
             <b>Trap: P: </b><span class='trap_damage'></span><br>
-            <b>Combo : </b><input class='combo_option'>&nbsp;<input class='stack combo_time' type='number'><b>s</b><br>
+            <b>Combo : </b><input class='combo_option'>&nbsp;<input class='stack combo_time' type='number' value='0'><b>s</b><br>
             <b>ㄴDamage : </b><span class='combo_damage'></span>
         </div>
     </div>
     <br/>
     <div style='width:100%;float:left;'>
-        <br><br>last update: 2021-02-20 18:32<br>
+        <br><br>last update: 2021-02-21 03:00<br>
         <h3>***업데이트 이후 에러 발생시 Shift + F5키를 누르세요.***</h3>
 
 기본 공격 및 일부 스킬들은 일반 피해를 입히며 다음 공식을 적용합니다.<br>
