--- a/erbsdc/index.html
+++ b/erbsdc/index.html
@@ -1056,7 +1056,7 @@
     </div>
     <br/>
     <div style='width:100%;float:left;'>
-        <br><br>last update: 2021-02-24 20:13<br>
+        <br><br>last update: 2021-02-27 13:20<br>
         <h3>***업데이트 이후 에러 발생시 Shift + F5키를 누르세요.***</h3>
 
 기본 공격 및 일부 스킬들은 일반 피해를 입히며 다음 공식을 적용합니다.<br>
@@ -1069,7 +1069,7 @@
 피해 증가 = (기본 공격 추가 피해 - 피격된 적의 기본 공격 피해 감소)<br>
 피해 증폭 = (1 + 기본 공격 피해 증가율 - 피격된 적의 기본 공격 피해 감소율)<br>
 최종 피해 증폭 = (1 + 최종 피해 증가율 - 피격된 적의 최종 피해 감소율)<br>
-모드 증폭 = (모드별 주는 피해 증폭율 - 피격된 적의 ,,모드별 받는 피해 증폭율)<br>
+모드 증폭 = (모드별 주는 피해 증폭율 - 피격된 적의 모드별 받는 피해 증폭율)<br>
 <br>
 <br>
 대다수의 스킬은 스킬 피해를 입히며, 다음과 같은 공식으로 적용됩니다.<br>
